# qtc-for-harmonyos

./: .gitignore  .sonarcloud.properties  CMakeLists.txt  Harmony_zh_CN.qm  README.md  VERSIONING.md  coverage.xml  harmonyconfigurations.h  harmonydevice.cpp  harmonysettingswidget.h  ohos.cpp  qrc.qrc  sonar-project.properties
.github/workflows/: ci-linux.yml  ci-mac.yml  ci-windows.yml  cmake-multi-platform.yml  sonarcloud.yml
cmake/: HarmonyQtcOptionalSources.cmake  QtCreatorVersion.cmake
docs/: ACTION-PLAN.md  ANDROID-PARITY.md  ARCHITECTURE.md  AUTHORS.md  BUILD-REPRODUCIBILITY.md  COMPARISON-PROGRESS.md  DEBUG-TASKS.md  DESIGN-DETAIL-ANDROID-MAPPING.md  DESIGN-DETAIL-ARCHITECTURE.md  DESIGN-DETAIL-BUILD-DEPLOY-RUN.md  DESIGN-DETAIL-MODULES.md  DESIGN-DETAIL-ROADMAP.md  DESIGN-OVERVIEW.md  GAP-ANALYSIS.md  HARMONY-LLDB-DEBUG.md  MODULES.md  OPERATIONS.md  POST-RELEASE.md  PRIORITY-PLAN.md  QA-MANUAL-SMOKE.md  QT-OH-BINARY-CATALOG.md  README.md  RELEASE-CHECKLIST.md  RELEASE-NOTES-1.0.0-alpha.md  SDK-PACKAGE-MANAGER.md  USER-MANUAL.md  qt-oh-binary-catalog.v1.json
docs/images/user-manual/: README.md
docs/release-notes/: RELEASE-NOTES-1.0.0.md
lib/: CMakeLists.txt
lib/arktsdebugbridge/: CMakeLists.txt  arktsdebugbridge.cpp  arktsdebugbridge.h
lib/hdcsocketclient/: CMakeLists.txt  hdcsocketclient.cpp  hdcsocketclient.h  hdcsocketprotocol.cpp  hdcsocketprotocol.h
lib/ohprojectecreator/: CMakeLists.txt  ohprojectecreator.cpp  ohprojectecreator.h  project_tree.json  resource.qrc
lib/ohprojectecreator/ohpro/: build-profile.json5
lib/ohprojectecreator/ohpro/AppScope/: app.json5
lib/ohprojectecreator/ohpro/AppScope/resources/base/element/: string.json
lib/ohprojectecreator/ohpro/entry/: build-profile.json5  oh-package.json5
lib/ohprojectecreator/ohpro/entry/src/main/: module.json5
lib/ohprojectecreator/ohpro/hvigor/: hvigor-config.json5
lib/usbmonitor/: CMakeLists.txt  usbmonitor.cpp  usbmonitor.h
scripts/: lldbbridge.patch  lldbbridge.py  run-coverage.sh
share/templates/projects/qtwidgetsapplication/: CMakeLists.patch  CMakeLists.txt
src/: CMakeLists.txt  Harmony.json.in  Harmony_zh_CN.ts  harmonybuildconfiguration.cpp  harmonybuildconfiguration.h  harmonybuildhapstep.cpp  harmonybuildhapstep.h  harmonyconfigurations.cpp  harmonyconfigurations.h  harmonydebugsupport.cpp  harmonydebugsupport.h  harmonydeployqtstep.cpp  harmonydeployqtstep.h  harmonydevice.cpp  harmonydevice.h  harmonydeviceinfo.cpp  harmonydeviceinfo.h  harmonydeviceinfo_test.cpp  harmonydeviceinfo_test.h  harmonydevicemanager.cpp  harmonydevicemanager.h  harmonyhdcforward.cpp  harmonyhdcforward.h  harmonyhdctargetsparser.cpp  harmonyhdctargetsparser.h  harmonyhdctargetsparser_test.cpp  harmonyhdctargetsparser_test.h  harmonyhvigoroutputparser.cpp  harmonyhvigoroutputparser.h  harmonyhvigoroutputparser_test.cpp  harmonyhvigoroutputparser_test.h  harmonylogcategories.cpp  harmonylogcategories.h  harmonymainrunsockettask.cpp  harmonymainrunsockettask.h  harmonyqtcdefs.h  harmonyqttreleasesdownloader.cpp  harmonyqttreleasesdownloader.h  harmonyqttsdkmanagerdialog.cpp  harmonyqttsdkmanagerdialog.h  (+25 more)
src/compat/: README.md
test/: CMakeLists.txt  README.md
test/harmonypluginlogictest/: CMakeLists.txt  harmonydeviceinfo_test.cpp  harmonydeviceinfo_test.h  harmonyhdctargetsparser_test.cpp  harmonyhdctargetsparser_test.h  harmonyhvigoroutputparser_test.cpp  harmonyhvigoroutputparser_test.h  harmonypluginlogictest.cpp
test/hdcsocketclienttest/: CMakeLists.txt  hdcsocketclienttest.cpp
test/ohos_lldb_debug_cli/: CMakeLists.txt  main.cpp
test/ohprocreatetest/: CMakeLists.txt  main.cpp
test/qt_oh_binary_catalog_generator/: CMakeLists.txt  main.cpp
test/usbmonitortest/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
tools/arktsdebugbridge/: CMakeLists.txt  main.cpp
